--- a/form.html
+++ b/form.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="form.css">
     <title>OD Form</title>
 </head>
 <body>
-    
+    <main>
+        <div class="left-container">
+            <div class="hero-container">
+                <img src="logo.png" alt="odin logo" height="80">
+            </div>
+            <p class="left-footer">
+                Photo by <u>CelestialCanvas</u>
+            </p>
+        </div>
+        <div class="right-container"></div>
+    </main>
 </body>
 </html>
