Hero banner fix

--- a/form.html
+++ b/form.html
@@ -10,7 +10,8 @@
     <main>
         <div class="left-container">
             <div class="hero-container">
-                <img src="logo.png" alt="odin logo" height="80">
+                <img src="logo.png" alt="odin logo" height="130">
+                <p>ODIN</p>
             </div>
             <p class="left-footer">
                 Photo by <u>CelestialCanvas</u>
