Added the form with some styles

--- a/form.html
+++ b/form.html
@@ -17,7 +17,55 @@
                 Photo by <u>CelestialCanvas</u>
             </p>
         </div>
-        <div class="right-container"></div>
+        <div class="right-container">
+            <div class="top-right">
+                <p>
+                    This is not real, But you know you want something like this in your life<br>
+                    It's going to be EPIC! Go ahead !
+                </p>
+                <p>
+                    You know you want to.
+                </p>
+            </div>
+            <div class="mid-right">
+                <h2>Let's do This !</h1>
+                <form action="" method="get">
+                    <div class="form-row">
+                        <div class="form-elem">
+                            <label for="fName">FIRST NAME</label>
+                            <input id="fName" type="text">
+                        </div>
+                        <div class="form-elem">
+                            <label for="lName">LAST NAME</label>
+                            <input id="lName" type="text">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-elem">
+                            <label for="email">EMAIL</label>
+                            <input type="email" name="email" id="email">
+                        </div>
+                        <div class="form-elem">
+                            <label for="tel">NUMBER</label>
+                            <input type="tel" name="telNum" id="tel">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-elem">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" name="password" id="password">
+                        </div>
+                        <div class="form-elem">
+                            <label for="confPassword">CONFIRM PASSWORD</label>
+                            <input type="password" name="confirmedPassword" id="confPassword">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="bot-right">
+
+            </div>
+        </div>
     </main>
 </body>
 </html>
