--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
             </div>
             <div class="mid-right">
                 <h2>Let's do This !</h1>
-                <form action="" method="get">
+                <form id="myForm" action="" method="get">
                     <div class="form-row">
                         <div class="form-elem">
                             <label for="fName">FIRST NAME</label>
@@ -63,7 +63,7 @@
                 </form>
             </div>
             <div class="bot-right">
-                <button type="submit">Create Account</button>
+                <button type="submit" form="myForm">Create Account</button>
                 <p>
                     Already have an account? <a href="#">Log In</a>
                 </p>
